@@ -1,3 +1,0 @@
-This Python 3 module provides an DNS API for looking up DNS entries
-from within Python 3 modules and applications. This module is a
-simple, lightweight implementation.
