@@ -1,18 +1,0 @@
-# $NetBSD: Makefile,v 1.2 2018/10/15 09:02:42 adam Exp $
-
-DISTNAME=	py3dns-3.2.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-CATEGORIES=	net python
-MASTER_SITES=	${MASTER_SITE_PYPI:=p/py3dns/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://launchpad.net/py3dns
-COMMENT=	Python 3 DNS library
-LICENSE=	python-software-foundation
-
-USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
